JWWEB-465: Fix footer buttons unability to click on mobile

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -985,8 +985,6 @@ html.active {
     .links {
       margin-bottom: 40px;
       li {
-        display: block;
-        float: left;
         width: 25%;
         margin-bottom: 40px;
         a {
